# backend

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  migrate_add_user_id.sql  pyproject.toml  reset_db.sh  schema.sql
.gemini/: styleguide.md
migrations/: 001_initial_schema.sql  002_add_task_completed.sql  README.md
src/: containers.py  database.py  main.py
src/application/mappers/: __init__.py  task_mapper.py  todo_mapper.py
src/application/services/: __init__.py  ai_service.py  auth_service.py  social_auth_provider.py  task_service.py  todo_service.py
src/domain/models/: __init__.py  task.py  todo.py  user.py
src/domain/repositories/: __init__.py  task_repository.py  todo_repository.py  user_repository.py
src/infrastructure/ai/: base_model_service.py  gemini_model_service.py
src/infrastructure/auth/: __init__.py  kakao_auth_provider.py
src/infrastructure/database/: __init__.py  in_memory_todo_repository.py  sqlalchemy_models.py  sqlalchemy_task_repository.py  sqlalchemy_todo_repository.py  sqlalchemy_user_repository.py
src/presentation/api/: __init__.py  auth.py  health.py  schemas.py  task.py  todo.py
test/: conftest.py  fake_ai_model_service.py  fixtures.py  test_ai_todo.py  test_auth_service.py  test_bulk_todo.py  test_todo_api.py  test_user_withdraw_api.py
